tests/source/typing/bad/testfile-undef_struct-3.c

int main(){ struct B *a; return 0; }
